-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Looks like a regression from http://review.whamcloud.com/15217 (a801262)
[ 280s] gcc -DHAVE_CONFIG_H -I. -I../.. -include /usr/src/packages/BUILD/cray-lustre/config.h -I/usr/src/packages/BUILD/cray-lustre/libcfs/include -I/usr/src/packages/BUILD/cray-lustre/lnet/include -I/usr/src/packages/BUILD/cray-lustre/lustre/include -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -fmessage-length=0 -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -Werror -fno-stack-protector -I/opt/cray-hss-devel/7.3.0/include -Werror -MT lfs.o -MD -MP -MF .deps/lfs.Tpo -c -o lfs.o lfs.c [ 280s] cc1: warnings being treated as errors [ 280s] lfs.c: In function 'migrate_copy_timestamps': [ 280s] lfs.c:481: error: implicit declaration of function 'futimes'
I think lfs.c just needs to include sys/time.h.
- is related to
-
LU-6264 Enable strict compiler defence modes
-
- Resolved
-