lustre/utils/lfs.c
@@ -57,6 +57,7 @@
 #include <grp.h>
 #include <sys/ioctl.h>
 #include <sys/quota.h>
+#include <sys/time.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
