lustre/autoconf/lustre-core.m4
@@ -2072,7 +2072,7 @@ AC_MSG_NOTICE([Lustre core checks
 LC_CONFIG_OBD_BUFFER_SIZE
 
 AS_IF([test $target_cpu == "i686" -o $target_cpu == "x86_64"],
-	[CFLAGS="$CFLAGS -Werror"])
+	[CFLAGS="$CFLAGS -Wall -Werror"])
 
 # maximum MDS thread count
 LC_MDS_MAX_THREADS
